--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.3.4
   image_picker: ^1.1.2
+  flutter_launcher_icons: ^0.14.1
+
+
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +66,15 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+    - assets/images/edc_logo.png
+    - assets/images/test_image.png
+    - assets/images/img.png
+
+
+  
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
