splashscreen/registration/email_dublication update

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
     - assets/images/edc_logo.png
     - assets/images/test_image.png
     - assets/images/img.png
+    - assets/images/edc_logo11.png
 
 
   
